spock added