@@ -1,20 +1,20 @@
 buildscript {
 	ext {
-		springBootVersion = '1.2.6.RELEASE'
+		springBootVersion = '1.5.1.RELEASE'
 	}
 	repositories {
 		mavenCentral()
-        jcenter()
 	}
 	dependencies {
-		classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-		classpath 'io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE'
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+
 	}
+
 }
 
 apply plugin: 'java'
-apply plugin: 'spring-boot'
-apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.springframework.boot'
+
 apply plugin: 'groovy'
 
 jar {
@@ -60,44 +60,32 @@ sourceSets {
     }
 }
 
-dependencyManagement {
-	imports {
-		mavenBom 'org.springframework:spring-framework-bom:4.2.1.RELEASE'
-                mavenBom "org.springframework.data:spring-data-releasetrain:${springDataVersion}"
-	}
-}
+
 
 dependencies {
-	compile 'org.springframework.boot:spring-boot-starter-web'
-    compile 'org.springframework.hateoas:spring-hateoas:0.18.0.RELEASE' //19 problem  Failed to instantiate [com.fasterxml.jackson.databind.ObjectMapper]
-    //n: Error creating bean with name 'halObjectMapper' defined in class path resource [org/springframework/boot/autoconfigure/data/rest/SpringBootRepositoryRestMvcConfiguration.class]: Bean instantiation via factory method failed; nested exception is org.springframework.beans.BeanInstantiationException: Failed to instantiate [com.fasterxml.jackson.databind.ObjectMapper]:
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.6.2'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.2'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.6.2'
-    compile 'org.springframework.boot:spring-boot-starter-logging'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.springframework.data:spring-data-rest-webmvc'
-    compile 'org.springframework:spring-core'
-    compile 'org.springframework:spring-beans'
-    compile 'org.springframework:spring-context'
-    compile 'org.springframework:spring-orm'
-    compile 'org.springframework:spring-tx'
-    compile 'org.springframework:spring-aop'
-    compile 'org.projectlombok:lombok:1.16.6'
+	compile('org.springframework.boot:spring-boot-starter-actuator')
+	compile('org.springframework.data:spring-data-rest-hal-browser')
+	compile('org.springframework.boot:spring-boot-starter-hateoas')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile 'org.springframework.boot:spring-boot-starter-aop'
+	runtime('org.springframework.boot:spring-boot-devtools')
+        compile('org.springframework.boot:spring-boot-starter-data-jpa')
+		compile('org.springframework.boot:spring-boot-starter-data-rest')
+		compile('org.springframework.data:spring-data-rest-hal-browser')
+		compile('org.springframework.boot:spring-boot-starter-logging')
+		compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '4.8'
+	compile 'org.springframework.boot:spring-boot-configuration-processor'
+	compile 'org.projectlombok:lombok'
+	compile 'com.google.guava:guava:20.+'
     
-    compile 'io.springfox:springfox-swagger2:2.2.2'
-    compile 'io.springfox:springfox-swagger-ui:2.2.2'
+    	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.5.0'
+		compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.5.0'
+
     
-   
-    
-    compile 'javax.validation:validation-api:1.1.0.Final'
-    compile 'org.hibernate:hibernate-validator:5.2.2.Final'
-    compile 'org.hibernate:hibernate-core:5.0.2.Final'
-    compile 'org.hibernate:hibernate-entitymanager:5.0.2.Final'
-   
+  
     
     compile 'com.h2database:h2'
-    compile 'com.google.guava:guava:18.0'
+    compile 'com.google.guava:guava:20.+'
     
     compile 'org.codehaus.groovy:groovy-all:2.4.5'
     compile 'com.fasterxml.jackson.core:jackson-databind'
@@ -106,17 +94,40 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.5'
     compile 'org.apache.httpcomponents:fluent-hc:4.5'
   
+  
+	compile group: 'io.javaslang', name: 'javaslang', version: '2.0.5'
+	compile group: 'io.javaslang', name: 'javaslang-match', version: '2.0.5'
+	compile group: 'io.reactivex', name: 'rxjava', version: '1.2.3'
+
+	compile ("com.github.javafaker:javafaker:0.12")
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
+	testCompile 'org.awaitility:awaitility:2.0.0'
+    // https://mvnrepository.com/artifact/cglib/cglib-nodep
+    compile group: 'cglib', name: 'cglib-nodep', version: '3.2.4'
+       // allows mocking of classes (in addition to interfaces)
+  // https://mvnrepository.com/artifact/org.objenesis/objenesis
+      compile group: 'org.objenesis', name: 'objenesis', version: '2.5.1'
+    // allows mocking of classes without default constructor (together with CGLIB)
+  
     
+    compile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4-rc-2'
     
-    testCompile 'com.jayway.jsonpath:json-path'
-    testCompile 'junit:junit'
-    testCompile 'org.assertj:assertj-core:3.2.0'
-    testCompile 'org.springframework:spring-test'
-    
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
-	
-    testCompile("org.spockframework:spock-core:1.0-groovy-2.4")
-    testCompile("org.codehaus.groovy.modules.http-builder:http-builder:0.7+")
-    compile 'net.sf.json-lib:json-lib:2.4:jdk15'
+	bootRun {
+		if (System.properties.containsKey('spring.profiles.active')) {
+			systemProperty "spring.profiles.active", System.properties['spring.profiles.active']
+		}
+
+		def stdOpts = ['-Dfile.encoding=UTF8', '-Xms128m', '-Xmx256m' ,'-XX:+UseG1GC']
+		def gcOpts = ['-verbose:gc','-XX:+PrintGCDetails', '-XX:+PrintHeapAtGC',
+					'-XX:+PrintGCDateStamps', '-XX:+PrintTenuringDistribution',
+					'-XX:+PrintClassHistogram', '-Xloggc:gc.log']
+
+		jvmArgs = stdOpts + gcOpts
+
+		if ( project.hasProperty('jvmArgs') ) {
+			jvmArgs project.jvmArgs.split('\\s+')
+		}
+	}
     
 }
